Add task getter
