# agent/python/e2b_agent/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  ../openapi.yml
-#   timestamp: 2023-07-16T00:33:45+00:00
+#   timestamp: 2023-07-16T01:16:05+00:00
 
 from __future__ import annotations
 
@@ -13,7 +13,7 @@ class AgentTaskInput(BaseModel):
     pass
 
 
-class AgentStepDeliverables(BaseModel):
+class AgentStepArtifacts(BaseModel):
     pass
 
 
@@ -36,4 +36,4 @@ class AgentStepRequestBody(BaseModel):
 
 class AgentStepResult(AgentTask):
     output: Optional[AgentStepOutput] = None
-    deliverables: Optional[AgentStepDeliverables] = None
+    artifacts: Optional[AgentStepArtifacts] = None
